--- a/index.html
+++ b/index.html
@@ -33,9 +33,10 @@
 
 <body>
 
-  <section id="title">
+  <section class="colored-section" id="title">
     <div class="container-fluid">
       <!-- Nav Bar -->
+
       <nav class="navbar navbar-expand-lg navbar-dark">
         <a class="navbar-brand" href="#"> <i class="fa-solid fa-fire-flame-curved"></i> tindog</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
@@ -56,57 +57,67 @@
         </div>
       </nav>
 
-        <!-- Title -->
-        <div class="row">
-          <div class="col-lg-6">
-            <h1>Meet new and interesting dogs nearby.</h1>
+      <!-- Title -->
+      <div class="row">
+        <div class="col-lg-6">
+          <h1 class="big-heading">Meet new and interesting dogs nearby.</h1>
+          <a href="https://www.apple.com/at/app-store/" target="_blank" rel="noopener noreferrer">
             <button type="button" class="btn btn-dark btn-lg download-button"> <i class="fa-brands fa-apple"></i> Download</button>
+          </a>
+          <a href="https://play.google.com/store/games?gl=AT&utm_source=emea_Med&utm_medium=hasem&utm_content=Nov2020&utm_campaign=Evergreen&pcampaignid=MKT-EDR-emea-at-1001280-Med-hasem-py-Evergreen-Nov2020-Text_Search_BKWS%7CONSEM_kwid_43700007721100878&gclid=Cj0KCQjwxIOXBhCrARIsAL1QFCZfZhR0Y-tVUDltd0Dsx_XcP0WsFKiiM63zN_SGUMUTWua38fnXgGoaAnIcEALw_wcB&gclsrc=aw.ds"
+          target="_blank" rel="noopener noreferrer">
             <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fa-brands fa-google-play"></i> Download</button>
-          </div>
-
-          <div class="col-lg-6">
-            <img class="title-image" src="images/iphone6.png" alt="iphone-mockup">
-          </div>
+          </a>
         </div>
 
+        <div class="col-lg-6">
+          <img class="title-image" src="images/iphone6.png" alt="iphone-mockup">
+        </div>
       </div>
-  </section>
 
+    </div>
+  </section>
 
   <!-- Features -->
 
-  <section id="features">
-    <div class="row">
-      <div class="feature-box col-lg-4">
-        <i class="fa-solid fa-circle-check fa-4x feature-icon"></i>
-        <h3>Easy to use</h3>
-        <p>So easy to use, even your dog could do it.</p>
-      </div>
-      <div class="feature-box col-lg-4">
-        <i class="fa-solid fa-bullseye fa-4x feature-icon"></i>
-        <h3>Elite Clientele</h3>
-        <p>We have all the dogs, the greatest dogs.</p>
-      </div>
-      <div class="feature-box col-lg-4">
-        <i class="fa-solid fa-heart fa-4x feature-icon"></i>
-        <h3>Guaranteed to work</h3>
-        <p>Find the love of your dog's life or your money back.</p>
-      </div>
+  <section class="white-section" id="features">
 
+    <div class="container-fluid">
+
+      <div class="row">
+        <div class="feature-box col-lg-4">
+          <i class="fa-solid fa-circle-check fa-4x feature-icon"></i>
+          <h3 class="feature-title">Easy to use</h3>
+          <p>So easy to use, even your dog could do it.</p>
+        </div>
+        <div class="feature-box col-lg-4">
+          <i class="fa-solid fa-bullseye fa-4x feature-icon"></i>
+          <h3 class="feature-title">Elite Clientele</h3>
+          <p>We have all the dogs, the greatest dogs.</p>
+        </div>
+        <div class="feature-box col-lg-4">
+          <i class="fa-solid fa-heart fa-4x feature-icon"></i>
+          <h3 class="feature-title">Guaranteed to work</h3>
+          <p>Find the love of your dog's life or your money back.</p>
+        </div>
+      </div>
   </section>
 
 
   <!-- Testimonials -->
-  <section id="testimonials">
+
+  <section class="colored-section" id="testimonials">
+
+
     <div id="testimonial-carousel" class="carousel slide" data-ride="false">
       <div class="carousel-inner">
-        <div class="carousel-item active">
-          <h2>I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
+        <div class="carousel-item active container-fluid">
+          <h2 class="testimonial-text">I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
           <img class="testimonial-image" src="images/dog-img.jpg" alt="dog-profile">
           <em>Pebbles, New York</em>
         </div>
-        <div class="carousel-item">
-          <h2>My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
+        <div class="carousel-item container-fluid">
+          <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
           <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
           <em>Beverly, Illinois</em>
         </div>
@@ -122,7 +133,7 @@
 
   <!-- Press -->
 
-  <section id="press">
+  <section class="colored-section" id="press">
     <img class="press-logo" src="images/techcrunch.png" alt="tc-logo">
     <img class="press-logo" src="images/tnw.png" alt="tnw-logo">
     <img class="press-logo" src="images/bizinsider.png" alt="biz-insider-logo">
@@ -133,9 +144,9 @@
 
   <!-- Pricing -->
 
-  <section id="pricing">
+  <section class="white-section" id="pricing">
 
-    <h2>A Plan for Every Dog's Needs</h2>
+    <h2 class="section-heading">A Plan for Every Dog's Needs</h2>
     <p>Simple and affordable price plans for your and your dog.</p>
 
 
@@ -147,7 +158,7 @@
             <h4 class="my-0 fw-normal">Chihuahua</h4>
           </div>
           <div class="card-body">
-            <h2 class="card-title pricing-card-title">Free</h2>
+            <h2 class="card-title pricing-card-title price-text">Free</h2>
             <ul class="list-unstyled mt-3 mb-4">
               <li>5 Matches Per Day</li>
               <li>10 Messages Per day</li>
@@ -165,7 +176,7 @@
             <h4 class="my-0 fw-normal">Labrador</h4>
           </div>
           <div class="card-body">
-            <h2 class="card-title pricing-card-title">$49<small class="text-muted fw-light">/mo</small></h2>
+            <h2 class="card-title pricing-card-title price-text">$49<small class="text-muted fw-light">/mo</small></h2>
             <ul class="list-unstyled mt-3 mb-4">
               <li>Unlimited Matches</li>
               <li>Unlimited Messages</li>
@@ -183,7 +194,7 @@
             <h4 class="my-0 fw-normal">Mastiff</h4>
           </div>
           <div class="card-body">
-            <h2 class="card-title pricing-card-title">$99<small class="text-muted fw-light">/mo</small></h2>
+            <h2 class="card-title pricing-card-title price-text">$99<small class="text-muted fw-light">/mo</small></h2>
             <ul class="list-unstyled mt-3 mb-4">
               <li>Priority Listing</li>
               <li>Unlimited Matches</li>
@@ -198,93 +209,49 @@
 
   </section>
 
-  <!-- <div class="row">
-
-    <div class="pricing-column col-lg-4 col-md-6">
-      <div class="card">
-        <div class="card-header">
-          <h3>Chihuahua</h3>
-        </div>
-        <div class="card-body">
-          <h2>Free</h2>
-          <p>5 Matches Per Day</p>
-          <p>10 Messages Per Day</p>
-          <p>Unlimited App Usage</p>
-          <button type="button" class="btn btn-lg btn-block btn-outline-dark">Sign Up</button>
-        </div>
-      </div>
-    </div>
-
-    <div class="pricing-column col-lg-4 col-md-6">
-      <div class="card">
-        <div class="card-header">
-          <h3>Labrador</h3>
-        </div>
-        <div class="card-body">
-          <h2>$49 / mo</h2>
-          <p>Unlimited Matches</p>
-          <p>Unlimited Messages</p>
-          <p>Unlimited App Usage</p>
-          <button type="button" class="btn btn-lg btn-block btn-dark">Sign Up</button>
-
-
-        </div>
-      </div>
-    </div>
-
-    <div class="pricing-column col-lg-4">
-      <div class="card">
-        <div class="card-header">
-          <h3>Mastiff</h3>
-        </div>
-        <div class="card-body">
-          <h2>$99 / mo</h2>
-          <p>Pirority Listing</p>
-          <p>Unlimited Matches</p>
-          <p>Unlimited Messages</p>
-          <p>Unlimited App Usage</p>
-          <button type="button" class="btn btn-lg btn-block btn-dark">Sign Up</button>
-        </div>
-      </div>
-    </div>
-  </div> -->
-
   <!-- Call to Action -->
 
-  <section id="cta">
-
-    <h3 class="cta-text">Find the True Love of Your Dog's Life Today.</h3>
-    <button type="button" class="btn btn-dark btn-lg download-button"> <i class="fa-brands fa-apple"></i> Download</button>
-    <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fa-brands fa-google-play"></i> Download</button>
-
+  <section class="colored-section"id="cta">
+    <div class="container-fluid">
+      <h3 class="big-heading">Find the True Love of Your Dog's Life Today.</h3>
+      <a href="https://www.apple.com/at/app-store/" target="_blank" rel="noopener noreferrer">
+        <button type="button" class="btn btn-dark btn-lg download-button"> <i class="fa-brands fa-apple"></i> Download</button>
+      </a>
+      <a href="https://play.google.com/store/games?gl=AT&utm_source=emea_Med&utm_medium=hasem&utm_content=Nov2020&utm_campaign=Evergreen&pcampaignid=MKT-EDR-emea-at-1001280-Med-hasem-py-Evergreen-Nov2020-Text_Search_BKWS%7CONSEM_kwid_43700007721100878&gclid=Cj0KCQjwxIOXBhCrARIsAL1QFCZfZhR0Y-tVUDltd0Dsx_XcP0WsFKiiM63zN_SGUMUTWua38fnXgGoaAnIcEALw_wcB&gclsrc=aw.ds"
+      target="_blank" rel="noopener noreferrer">
+        <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fa-brands fa-google-play"></i> Download</button>
+      </a>
+    </div>
   </section>
 
 
   <!-- Footer -->
 
-  <footer id="footer">
-    <!-- Twitter -->
-    <a href="https://www.twitter.com/">
-      <i class="fa-brands fa-twitter footer-icons"></i>
-    </a>
+  <footer class="white-section" id="footer">
 
-    <!-- Facebook -->
-    <a href="https://www.facebook.com/">
-      <i class="fa-brands fa-facebook-f footer-icons"></i>
-    </a>
+    <div class="container-fluid">
+      <!-- Twitter -->
+      <a href="https://www.twitter.com/" target="_blank" rel="noopener noreferrer">
+        <i class="fa-brands fa-twitter footer-icons"></i>
+      </a>
 
-    <!-- Instagramm -->
-    <a href="https://www.instagram.com/">
-      <i class="fa-brands fa-instagram footer-icons"></i>
-    </a>
-    <!-- Mail -->
-    <a href="mailto:holyfather@stinson.com">
-      <i class="fa-solid fa-envelope footer-icons"></i>
-    </a>
+      <!-- Facebook -->
+      <a href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer">
+        <i class="fa-brands fa-facebook-f footer-icons"></i>
+      </a>
+
+      <!-- Instagramm -->
+      <a href="https://www.instagram.com/" target="_blank" rel="noopener noreferrer">
+        <i class="fa-brands fa-instagram footer-icons"></i>
+      </a>
+      <!-- Mail -->
+      <a href="mailto:holyfather@stinson.com">
+        <i class="fa-solid fa-envelope footer-icons"></i>
+      </a>
 
 
-    <p class="copyright-text">© Copyright 2022 TinDog</p>
-
+      <p class="copyright-text">© Copyright 2022 TinDog</p>
+    </div>
   </footer>
 
 
